--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - "./:/usr/src/myapp"
+      - "../:/usr/src/myapp"
     tty: true
 
   rust-postgres:
