--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-files = "0.6.2"
 diesel = { version = "2.1.0", features = ["postgres"] }
 dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
